crates/escalier_hm/src/parser/snapshots/escalier_hm__parser__tests__function_definition-6.snap
---
source: crates/escalier_hm/src/parser/mod.rs
expression: "parse(\"({x: p, y: q}) => p + q;\")"
---
Ok(
    Program {
        statements: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 24,
                    },
                },
                span: 0..24,
                kind: ExprStmt(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 23,
                            },
                        },
                        span: 0..23,
                        kind: Lambda(
                            Lambda {
                                params: [
                                    EFnParam {
                                        pat: Pattern {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 1,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 13,
                                                },
                                            },
                                            span: 1..13,
                                            kind: Object(
                                                ObjectPat {
                                                    props: [
                                                        KeyValue(
                                                            KeyValuePatProp {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 2,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 6,
                                                                    },
                                                                },
                                                                span: 2..6,
                                                                key: Ident {
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 0,
                                                                            column: 2,
                                                                        },
                                                                        end: Position {
                                                                            line: 0,
                                                                            column: 3,
                                                                        },
                                                                    },
                                                                    span: 2..3,
                                                                    name: "x",
                                                                },
                                                                value: Pattern {
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 0,
                                                                            column: 5,
                                                                        },
                                                                        end: Position {
                                                                            line: 0,
                                                                            column: 6,
                                                                        },
                                                                    },
                                                                    span: 5..6,
                                                                    kind: Ident(
                                                                        BindingIdent {
                                                                            name: "p",
                                                                            mutable: false,
                                                                            span: 5..6,
                                                                            loc: SourceLocation {
                                                                                start: Position {
                                                                                    line: 0,
                                                                                    column: 5,
                                                                                },
                                                                                end: Position {
                                                                                    line: 0,
                                                                                    column: 6,
                                                                                },
                                                                            },
                                                                        },
                                                                    ),
                                                                    inferred_type: None,
                                                                },
                                                                init: None,
                                                            },
                                                        ),
                                                        KeyValue(
                                                            KeyValuePatProp {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 8,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 12,
                                                                    },
                                                                },
                                                                span: 8..12,
                                                                key: Ident {
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 0,
                                                                            column: 8,
                                                                        },
                                                                        end: Position {
                                                                            line: 0,
                                                                            column: 9,
                                                                        },
                                                                    },
                                                                    span: 8..9,
                                                                    name: "y",
                                                                },
                                                                value: Pattern {
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 0,
                                                                            column: 11,
                                                                        },
                                                                        end: Position {
                                                                            line: 0,
                                                                            column: 12,
                                                                        },
                                                                    },
                                                                    span: 11..12,
                                                                    kind: Ident(
                                                                        BindingIdent {
                                                                            name: "q",
                                                                            mutable: false,
                                                                            span: 11..12,
                                                                            loc: SourceLocation {
                                                                                start: Position {
                                                                                    line: 0,
                                                                                    column: 11,
                                                                                },
                                                                                end: Position {
                                                                                    line: 0,
                                                                                    column: 12,
                                                                                },
                                                                            },
                                                                        },
                                                                    ),
                                                                    inferred_type: None,
                                                                },
                                                                init: None,
                                                            },
                                                        ),
                                                    ],
                                                    optional: false,
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        type_ann: None,
                                        optional: false,
                                    },
                                ],
                                body: Expr(
                                    Expr {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 18,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 23,
                                            },
                                        },
                                        span: 18..23,
                                        kind: BinaryExpr(
                                            BinaryExpr {
                                                op: Add,
                                                left: Expr {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 18,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 19,
                                                        },
                                                    },
                                                    span: 18..19,
                                                    kind: Ident(
                                                        Ident {
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 18,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 19,
                                                                },
                                                            },
                                                            span: 18..19,
                                                            name: "p",
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                                right: Expr {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 22,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 23,
                                                        },
                                                    },
                                                    span: 22..23,
                                                    kind: Ident(
                                                        Ident {
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 22,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 23,
                                                                },
                                                            },
                                                            span: 22..23,
                                                            name: "q",
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                            },
                                        ),
                                        inferred_type: None,
                                    },
                                ),
                                is_async: false,
                                return_type: None,
                                type_params: None,
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                inferred_type: None,
            },
        ],
    },
)
